# QESN_MABe_V2_REPO

./: .gitignore  BENCHMARK_DISCLAIMER.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  COMPLETION_REPORT.md  CONTRIBUTING.md  DATASET_SETUP.md  DEPLOYMENT_GUIDE.md  EXECUTE_NOW.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_SUMMARY.md  GITHUB_SETUP_GUIDE.md  HUGGINGFACE_INSTRUCTIONS.md  INSTALACION_RAPIDA.md  INSTALLATION.md  LICENSE  Mejorar_Precision_Modelo_Cuantico.md  NOTEBOOKS_OPTIMIZADOS_RESUMEN.md  PRE_BUILD_CHECKLIST.md  PROJECT_STATUS.md  QUICK_START.md  QUICK_START_GUIDE.md  README.md  README_GITHUB.md  README_NEW.md  README_OLD.md  README_PROFESSIONAL.md  RESUMEN_MEJORAS_IMPLEMENTADAS.md  create_demo_data.py  create_demo_weights.py  create_optimized_notebooks.py  create_space_final.py  create_space_simple.py  dataset_config.py  demo_espectacular.py  demo_espectacular_no_emoji.py  demo_espectacular_optimized.py  demo_profesional.py  demo_simple.py  (+13 more)
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
data/exposure_dataset/: labels.csv
data/exposure_dataset/results/: qesn_adaptive_predictions.parquet  qesn_classification_report.txt  qesn_confusion_matrix.npy
data/exposure_dataset/tracking/: video_000.parquet  video_001.parquet  video_002.parquet  video_003.parquet  video_004.parquet  video_005.parquet  video_006.parquet  video_007.parquet  video_008.parquet  video_009.parquet
demos/: README.md
demos/codespaces/: QESN_Codespaces_Demo.py
demos/colab/: QESN_Colab_Demo.py
demos/huggingface/: README.md  app.py  requirements.txt
demos/kaggle/: QESN_Kaggle_Demo.py
docs/: EXECUTIVE_SUMMARY.md  MASTER_PLAN.md  PHYSICS_THEORY.md
examples/: kaggle_submission.py  quick_demo.py
huggingface_space/: README.md  app.py  requirements.txt
include/core/: quantum_foam.h  quantum_neuron.h
include/io/: dataset_loader.h
include/training/: trainer.h
kaggle_model/: model_config.json
notebooks/: IMPLEMENTATION_SUMMARY_90_95.md  INSTRUCCIONES_DEMO.txt  NOTEBOOK_FIX_SUMMARY.md  QESN_Complete_Classification_Demo.ipynb  QESN_Demo_Accuracy.ipynb  QESN_Professional_Quantum_Demo.ipynb  QESN_Quantum_Demo_3.ipynb  README.md  qesn_complete_classification_demo.py  qesn_demo_2.py
python/: model_loader.py  qesn_inference.py  qesn_inference_optimized.py  quantum_foam.py
scripts/: build.bat  deploy_huggingface.py  deploy_kaggle.py  preprocess_parquet.py  train.bat
src/: main.cpp
src/core/: quantum_foam.cpp  quantum_neuron.cpp
src/io/: dataset_loader.cpp
src/qesn/: __init__.py  cli.py  config.py  diffusion.py
src/training/: trainer.cpp
tests/: test_cli.py  test_config.py  test_diffusion.py
